--- a/readme
+++ b/readme
@@ -13,7 +13,8 @@
 
 Из того, что хочется доделать:
 1) разобраться с проблемами связанными с обратной польской записью, из-за которой теряется -
-а также возникают проблемы при написании двух знаков подряд (нужно при операции с отрицательным числом), из-за чего функциональность модуля от числа теряется
+а также возникают проблемы при написании двух знаков подряд (нужно при операции с отрицательным числом), 
+модуля от отрицательного числа работает только в том случае, если отрицательное число взять в скобки
 ожидается, что придётся вносить изменения в функцию Tokenize, для корректной работы с - и отрицательными числами
 при этом с проблемой начала выражения с отрицательного числа я разобрался
 2) расширить функциональность уже имеющихся функций
