--- a/readme
+++ b/readme
@@ -6,6 +6,7 @@
 2) long sum (сумма двух чисел превышающих числовые пределы);
 3) разложение числа на простые делители;
 4) нахождение корней квадратного уравнения и их количества;
+5) в файле utils.cpp реализована функция trim, которая убирает лишние пробелы
 Также в файле calculator.cpp есть функции, которые не используются, но хочется их подключить к работе, так как по моему мнению они весьма полезны, среди таких там есть:
 нахождения точной cуммы для большого количества чисел типа double  ( эта суммы точнее наивной, такой как a + b), 
 функция является довольно полезной с учётом общеизвестного существования неточности в сумме чисел типа double в связи с их устройством
